# actions

./: README.md
.github/workflows/: develop.yaml
debug/: main.py  package.json  pyproject.toml
python-project/: pyproject.toml
