[tool.poetry]
name = "python-project"
version = "0.1.0"
description = ""
authors = ["boccochan <boccochan@gmail.com>"]
readme = "README.md"
packages = [{include = "python_project"}]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.96"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
